# alpenglow

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  TODO.md  astro.config.mjs  bench_run.sh  editions.toml  fix_script.py  install.sh  package.json  progress.md  readme.md  research.md  start.sh  test_fix.sh  uno.config.ts
.github/workflows/: ci.yml  kernel-bump.yml  release.yml
bundle/: files.html  index.html  settings.html
bundle/terminal/: index.html
docs/: INDEX.md  README.md  api_contract.md  architecture-support.md  browser_optimizations.md  build.md  contributing.md  crepuscularity-de.md  design-inspirations.md  missing.md  readiness.md  secure-boot.md  v0-architecture.md
docs/architecture/: README.md  appliance-system.md  browser-centric-os.md  glowfs.md  immutable-rootfs.md  oil-recipe-format.md  os-optimization-plan.md
docs/benchmarks/: post-refactor-speedup.md
docs/browser/: README.md  benchmarks.md  desktop.md  ideology.md  packages.md  profiles.md  readme.md  root-model.md
docs/guides/: dev_guide.md  tools_reference.md
docs/testing/: README.md
docs/tutorials/: getting_started.md
drivers/generic/: Cargo.toml  README.md  clock.rs  gpio.rs  lib.rs  mmc.rs  traits.rs  uart.rs
plans/: .gitkeep  build-out.md
public/: _headers  app.js
public/home/: benchmarks.md  profiles.md  root-model.md  welcome.md
public/root/: README.md  alpenglowed.sh
public/v86/: initrd-build-id.txt  v86-fallback.wasm
scripts/: aarch64-linux-musl-zigcc  aarch64-linux-musl-zigcxx  bench-all.sh  bench-boot-aarch64.sh  bench-boot.sh  bench-installed-desktops.sh  boot-native.sh  boot-shell.sh  build-aarch64-desktop.sh  build-aarch64-efi-release.sh  build-aarch64-fast.sh  build-aarch64-gui-sysroot.sh  build-aarch64.sh  build-ghostty-wasm.sh  build-initramfs.sh  build-release.sh  build-riscv64.sh  build-uboot-rk3566.sh  build-v86-initramfs.sh  build-v86-kernel.sh  build-v86-ssh.sh  build-wsl.sh  build.sh  check-kernel-latest.sh  ci-aarch64-cross.sh  ci-glowfs-kernel-module.sh  ci-os-appliance.sh  ci-profile-matrix.sh  ci-qemu-appliance.sh  ci-qemu-glowfs-disk-root.sh  ci-rust-core.sh  ci-rust-kernel-module.sh  ci-v86-initramfs.sh  ci-zig.sh  cross-build.sh  edition-resolve.sh  flash-rk3566.sh  install-rootfs.sh  kernel-merge.sh  migrate-os.sh  (+12 more)
scripts/lib/: common.sh
sold/src/: main.rs
src/: shell.js
src/layouts/: Base.astro
src/pages/: demo.astro  index.astro
src/v86/: libv86.mjs
system/: zig-common.zig
system/alpine/: README.md  build-rootfs.sh  configure-rootfs.sh  kernel  (+6 more)
system/installer/: Cargo.toml
system/installer/src/: lib.rs  tui.rs
system/installer/tests/: install.rs
system/installer/ui/: tui.crepus
system/oil/: Cargo.toml  setup_taps.py
system/oil/recipes/: dinit.yml  fastfetch.yml  toybox.yml
system/oil/src/: api.rs  bench.rs  bench_load.rs  bench_script.rs  bottle.rs  builder.rs  cache.rs  cask.rs  deps.rs  discovery.rs  ecosystem_install.rs  error.rs  formula_parser.rs  install.rs  lockfile.rs  main.rs  main.rs.patch  main.rs.rej  package_spec.rs  recipe.rs  remote_search.rs  signal.rs  sudo.rs  system_pm.rs  tap.rs  tap.rs.rej  test_support.rs  timing.rs  ui.rs  version.rs
system/oil/src/commands/: audit.rs  bundle.rs  cleanup.rs  completions.rs  doctor.rs  features.rs  info.rs  install.rs  leaves.rs  link.rs  list.rs  lock.rs  mod.rs  oil_info.rs  outdated.rs  path.rs  pin.rs  refresh.rs  reinstall.rs  search.rs  self_update.rs  services.rs  show_deps.rs  source.rs  sync.rs  tap.rs  uninstall.rs  update.rs  upgrade.rs  uses.rs  version_install.rs
system/oil/src/system/: distro.rs  generations.rs  installer.rs  manifest.rs  mod.rs  query.rs  resolver.rs  scripts.rs  state.rs  verifier.rs
system/oil/src/system/extractor/: apk.rs  deb.rs  mod.rs  nar.rs  pacman.rs  rpm.rs  xbps.rs
system/oil/src/system/registry/: apk.rs  apt.rs  dnf.rs  mod.rs  nix.rs  pacman.rs  xbps.rs
system/oil/src/util/: cache.rs
(+188 files in other folders)
