# Alpenglow Workspace Cargo Configuration
# This file is used by crate_universe to resolve Rust dependencies

[workspace]
resolver = "2"
members = [
    "system/netd",
    "system/glowfsctl",
    "system/oil",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license-file = "LICENSE"

[profile.release]
opt-level = "z"
lto = "fat"
strip = true
codegen-units = 1

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
