[package]
name = "oil"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[[bin]]
name = "oil"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3"
tar = "0.4"
flate2 = "1"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
rsa = { version = "0.9", features = ["pem"] }
cms = "0.2"
const-oid = "0.9"
der = "0.7"
signature = "2"
dunce = "1"
ctrlc = "3"
libc = "0.2"
nix = { version = "0.31", features = ["user"] }
shellexpand = "3"
urlencoding = "2"
clap = { version = "4", features = ["derive"] }
regex = "1"
tempfile = "3"
